--- a/posts/welcome-to-my-blog.mdx
+++ b/posts/welcome-to-my-blog.mdx
@@ -5,6 +5,11 @@ date: "2025-03-16, 14:00"
 
 # Hey there developer! 👋
 
-Welcome to my new updated website and with it comes a new blog section where you can learn more about me and my new engineering studies.
-
-If you don't know me yet, I am Viktor a Software Engineer and solo-preneur out of Czech Republic. Be sure to check me out on [Youtube](https://www.youtube.com/@withviktor), where I post about my day in a life of a solo developer and how I build my products from start to finish.
+Welcome to my new updated website and with it comes a new blog section where
+you can learn more about me and my new engineering studies.
+If you don't know me yet, I am Viktor a Software Engineer and solo-preneur out
+of Czech Republic. My passion is to build and create new experiences for users and developers.
+<br />
+Soon I will be posting more about my journey and what I have learned so far in my career on this blog and my [YouTube channel](https://www.youtube.com/@withviktor).
+<br />
+Stay tuned and see you soon! 🚀
