--- a/posts/welcome-to-my-blog.mdx
+++ b/posts/welcome-to-my-blog.mdx
@@ -9,7 +9,10 @@ Welcome to my new updated website and with it comes a new blog section where
 you can learn more about me and my new engineering studies.
 If you don't know me yet, I am Viktor a Software Engineer and solo-preneur out
 of Czech Republic. My passion is to build and create new experiences for users and developers.
+
 <br />
-Soon I will be posting more about my journey and what I have learned so far in my career on this blog and my [YouTube channel](https://www.youtube.com/@withviktor).
+Soon I will be posting more about my journey and what I have learned so far in
+my career on this blog and my [YouTube
+channel](https://www.youtube.com/@withviktor).
 <br />
 Stay tuned and see you soon! 🚀
